# web-home-work

./: LICENSE  README.md  phonebook.msf
home_work_1/bot_folder/: module_classes_2.py  phonebook.msf  start_bot.py  test.py
home_work_2/Pipenv/: Pipfile  README.md
home_work_2/Pipenv/bot_folder/: clean_folder.py  export_func.py  intellect_input.py  module_classes_2.py  start_bot.py
home_work_2/Poetry/: pyproject.toml  setup.py
home_work_2/Poetry/bot_folder/: module_classes_note.py  phonebook_bot.json  start_bot.py  test.py
