[tool.poetry]
name = "assistance-bot"
version = "0.1.0"
description = "first poroject"
authors = ["SERHII MELNYK <melser68@i.ua>"]
license = "MIT"
readme = "README.md"
#packages = [{include = "assistance_bot"}]

[tool.poetry.dependencies]
python = "~3.9"
py7zr = "~0.20.5"


[tool.poetry.group.dev.dependencies]
pytest = "~7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
